fix arrow overlap on mobile

--- a/source/journal/journal.css
+++ b/source/journal/journal.css
@@ -141,13 +141,6 @@ h2 {
     border-radius: var(--arrow-border-radius);
 }
 
-/* Settings button positioning and interaction */
-#settings {
-    width: var(--arrow-font-size);
-    float: right;
-    cursor: pointer;
-}
-
 
 /* Sizing and spacing for the arrows in the top */
 .top-bar #right-arrow {
@@ -427,4 +420,30 @@ li {
 /* Focus outline styling for the tasklist checkbox */
 .task-item input[type="checkbox"]:focus {
     box-shadow: var(--task-checkbox-focus);
+}
+
+/*Mobile styling for arrows not overlapping with tags*/
+@media (max-width: 376px){
+    /* Sizing and spacing for the arrows in the top */
+.top-bar #right-arrow {
+    margin-left: 35px;
+    font-size: var(--arrow-font-size);
+}
+
+/* Sizing for left arrow in the top */
+.top-bar #left-arrow {
+    font-size: var(--arrow-font-size);
+}
+
+h2{
+    margin-top:50px;
+}
+
+}
+
+@media (max-width: 727px){
+    h2{
+        margin-top:50px;
+    }
+
 }
